Moving around place in directory

--- a/BeneluxWebb/templates/stats/_stats_table.html
+++ b/BeneluxWebb/templates/stats/_stats_table.html
@@ -2,8 +2,8 @@
 
 <div class="stats-table-container">
     <div class="table-body-flex">
-        {% include "partials/_stats_table_sticky.html" %}
-        {% include "partials/_stats_table_body.html" %}
+        {% include "stats/_stats_table_sticky.html" %}
+        {% include "stats/_stats_table_body.html" %}
     </div>
 </div>
 
