--- a/BeneluxWebb/templates/esea/_esea_season.html
+++ b/BeneluxWebb/templates/esea/_esea_season.html
@@ -308,38 +308,42 @@
                                 
                                 <tbody>
                                     {% for player in team.player_stats %}
-                                    <tr>
-                                        <td class="ellipsis">
-                                            <a class="player-link" href="https://www.faceit.com/en/players/{{ player['player_name'] }}" target="_blank">
-                                                <img
-                                                    src="{{ url_for('static', filename='img/flags/' ~ player['country']|lower ~ '.png') }}"
-                                                    alt="{{ player['country'] }}" width="20"
-                                                    class="me-2"
-                                                >
-                                                <span>{{ player['player_name'] }}</span>
-                                            </a>
-                                        </td>
-                                        <td class="numeric-cell">
-                                            {{ player['maps_played'] if player['maps_played'] else '-' }}
-                                        </td>
-                                        <td class="numeric-cell">
-                                            {{ player['headshots_percent'] | round(0) }}
-                                        </td>
-                                        <td class="numeric-cell">
-                                            {{ '%.2f' % player['k_d_ratio'] if player['k_d_ratio'] is not none else '-' }}
-                                        </td>
-                                        <td class="numeric-cell
-                                            {% set value = player['hltv'] %}
-                                            {% if value is not none %}
-                                                {% if value >= 1.05 %}
-                                                    good-value
-                                                {% elif value <= 0.95 %}
-                                                    bad-value
-                                                {% endif %}
-                                            {% endif %}">
-                                            {{ '%.2f' % player['hltv'] if player['hltv'] is not none else '-' }}
-                                        </td> 
-                                    </tr>
+                                        <tr>
+                                            <td class="ellipsis">
+                                                <a class="player-link" href="https://www.faceit.com/en/players/{{ player['player_name'] }}" target="_blank">
+                                                    <img
+                                                        src="{{ url_for('static', filename='img/flags/' ~ (player['country']|lower if player['country'] else 'xx') ~ '.png') }}"
+                                                        alt="{{ player['country'] if player['country'] else 'N/A' }}" width="20"
+                                                        class="me-2"
+                                                    >
+                                                    <span>{{ player['player_name'] if player['player_name'] else 'Unknown' }}</span>
+                                                </a>
+                                            </td>
+
+                                            <td class="numeric-cell">
+                                                {{ player['maps_played'] if player['maps_played'] is not none else '-' }}
+                                            </td>
+
+                                            <td class="numeric-cell">
+                                                {{ player['headshots_percent']|default(None)|round(0) if player['headshots_percent'] is not none else '-' }}
+                                            </td>
+
+                                            <td class="numeric-cell">
+                                                {{ '%.2f' % player['k_d_ratio'] if player['k_d_ratio'] is not none else '-' }}
+                                            </td>
+
+                                            <td class="numeric-cell
+                                                {% set value = player['hltv'] %}
+                                                {% if value is not none %}
+                                                    {% if value >= 1.05 %}
+                                                        good-value
+                                                    {% elif value <= 0.95 %}
+                                                        bad-value
+                                                    {% endif %}
+                                                {% endif %}">
+                                                {{ '%.2f' % player['hltv'] if player['hltv'] is not none else '-' }}
+                                            </td>
+                                        </tr>
                                     {% endfor %}
                                 </tbody>
                             </table>
