Rework of stats page

--- a/BeneluxWebb/templates/stats/stats_copy.html
+++ b/BeneluxWebb/templates/stats/stats_copy.html
@@ -182,7 +182,7 @@
             <!-- Stats table -->
             <div class="column-right position-relative">
                 <div class="stats-table-box" id="stats-table-box">
-                    {% include "partials/_stats_table.html" %}
+                    {% include "stats/_stats_table.html" %}
                 </div>
             </div>
         </div>
